--- a/Javascript_Typescript/javascript_snippets.ipynb
+++ b/Javascript_Typescript/javascript_snippets.ipynb
@@ -674,6 +674,95 @@
     "  })\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 20 Helpful JS one-liners\n",
+    "\n",
+    "1) Find the max value in an array:\n",
+    "\n",
+    "`Math.max(...array)`\n",
+    "\n",
+    "2) Remove duplicates from an array:\n",
+    "\n",
+    "`[...new Set(array)]`\n",
+    "\n",
+    "3) Generate a random number between 1 and 100:\n",
+    "\n",
+    "`Math.floor(Math.random() * 100) + 1`\n",
+    "\n",
+    "4) Check if a string is a valid number:\n",
+    "\n",
+    "`!isNaN(parseFloat(string))`\n",
+    "\n",
+    "5) Get the current date and time:\n",
+    "\n",
+    "`new Date().toString()`\n",
+    "\n",
+    "6) Check if a variable is an array:\n",
+    "\n",
+    "`Array.isArray(variable)`\n",
+    "\n",
+    "7) Check if a variable is an object:\n",
+    "\n",
+    "`typeof variable === \"object\"`\n",
+    "\n",
+    "8) Convert an array to a string:\n",
+    "\n",
+    "`array.join(\",\")`\n",
+    "\n",
+    "9) Check if a variable is a function:\n",
+    "\n",
+    "`typeof variable === \"function\"`\n",
+    "\n",
+    "10) Convert an object to an array:\n",
+    "\n",
+    "`Object.values(object)`\n",
+    "\n",
+    "11) Count the occurrences of an element in an array:\n",
+    "\n",
+    "`array.filter(x => x === element).length`\n",
+    "\n",
+    "12) Create a new object with a dynamic key and value:\n",
+    "\n",
+    "`{ [key]: value }`\n",
+    "\n",
+    "13) Check if a string is a palindrome:\n",
+    "\n",
+    "`string === string.split(\"\").reverse().join(\"\")`\n",
+    "\n",
+    "14) Get the the sum of all the numbers in an array\n",
+    "\n",
+    "`array.reduce((a, b) => a + b, 0));`\n",
+    "\n",
+    "15) Get the current timestamp:\n",
+    "\n",
+    "`Date.now()`\n",
+    "\n",
+    "16) Check if a variable is null:\n",
+    "\n",
+    "`variable === null`\n",
+    "\n",
+    "17) Check if a variable is undefined:\n",
+    "\n",
+    "`typeof variable === \"undefined\"`\n",
+    "\n",
+    "18) Find the minimum value in an array\n",
+    "\n",
+    "`Math.min(...array)`\n",
+    "\n",
+    "19) Check if an array is empty:\n",
+    "\n",
+    "`array.length === 0`\n",
+    "\n",
+    "20) Create a new array with a specified range of numbers:\n",
+    "\n",
+    "`Array.from({ length: n }, (_, i) => i)`"
+   ]
   }
  ],
  "metadata": {
