--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -157,12 +157,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
-    "## Generics in React Components\n",
-    "leverage generics to create flexible and dynamic components"
+    "## Generics \n",
+    "\n",
+    "leverage generics in React to create flexible and dynamic components"
    ]
   },
   {
@@ -176,7 +178,7 @@
    "outputs": [],
    "source": [
     "import React from 'react'\n",
-    "\n",
+    "//! incomplete\n",
     "//* goal is to pass any items, and have the id of that \n",
     "//* item propagate through to 2nd (render) function\n",
     "\n",
@@ -354,9 +356,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Conflict with a committed line: \nconst getKeyWithHighestValue = <TObj extends Record<string, number>>(\n______^\nTS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.\n\nLine 5, Character 7\nconst getKeyWithHighestValue = <TObj extends Record<string, number>>(\n______^\nTS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.\n\nConflict with a committed line: \nconst finalResult = getKeyWithHighestValue({\n______^\nTS2451: Cannot redeclare block-scoped variable 'finalResult'.\n\nLine 28, Character 7\nconst finalResult = getKeyWithHighestValue({\n______^\nTS2451: Cannot redeclare block-scoped variable 'finalResult'.\n\nConflict with a committed line: \nconst key = finalResult.key;\n______^\nTS2451: Cannot redeclare block-scoped variable 'key'.\n\nLine 34, Character 7\nconst key = finalResult.key;\n______^\nTS2451: Cannot redeclare block-scoped variable 'key'.\n\nLine 0, Character 7\nconst value = finalResult.value;\n______^\nTS2451: Cannot redeclare block-scoped variable 'value'.\n\nLine 35, Character 7\nconst value = finalResult.value;\n______^\nTS2451: Cannot redeclare block-scoped variable 'value'.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Conflict with a committed line: ",
+      "const getKeyWithHighestValue = <TObj extends Record<string, number>>(",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.",
+      "",
+      "Line 5, Character 7",
+      "const getKeyWithHighestValue = <TObj extends Record<string, number>>(",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.",
+      "",
+      "Conflict with a committed line: ",
+      "const finalResult = getKeyWithHighestValue({",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'finalResult'.",
+      "",
+      "Line 28, Character 7",
+      "const finalResult = getKeyWithHighestValue({",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'finalResult'.",
+      "",
+      "Conflict with a committed line: ",
+      "const key = finalResult.key;",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'key'.",
+      "",
+      "Line 34, Character 7",
+      "const key = finalResult.key;",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'key'.",
+      "",
+      "Line 0, Character 7",
+      "const value = finalResult.value;",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'value'.",
+      "",
+      "Line 35, Character 7",
+      "const value = finalResult.value;",
+      "______^",
+      "TS2451: Cannot redeclare block-scoped variable 'value'.",
+      "    at execTranspile (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:527:28)",
+      "    at Socket._emitMessage (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
    "source": [
     "//* sometimes you need to contrain the generic that gets passed in\n",
     "\n",
@@ -392,7 +451,9 @@
     "});\n",
     "\n",
     "const key = finalResult.key;\n",
-    "const value = finalResult.value;"
+    "const value = finalResult.value;\n",
+    "\n",
+    "console.log(key)"
    ]
   },
   {
@@ -434,9 +495,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='background:#ffecb3;padding:1em;border-left:2px solid #ff6d00'><b>Configuration is not found!</b> Default configuration will be used: <pre>{\"module\":1,\"target\":1,\"moduleResolution\":2,\"esModuleInterop\":true}</pre></div>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some string\n"
+     ]
+    }
+   ],
    "source": [
     "//* we need to constrain TKey but still infer it\n",
     "const getValue1 = <TObj, TKey extends keyof TObj>(obj: TObj, key: TKey) => {\n",
