--- a/Git/git_snippets.ipynb
+++ b/Git/git_snippets.ipynb
@@ -144,7 +144,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.16 (main, Dec  7 2022, 10:06:04) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
