--- a/Javascript_Typescript/javascript_snippets.ipynb
+++ b/Javascript_Typescript/javascript_snippets.ipynb
@@ -763,6 +763,77 @@
     "\n",
     "`Array.from({ length: n }, (_, i) => i)`"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Using Local Storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// utils.js\n",
+    "export const storage1 = {\n",
+    "  getItem(key, fallbackValue) {\n",
+    "    try {\n",
+    "      return localStorage.getItem(key);\n",
+    "    } catch(e) {\n",
+    "      return fallbackValue;\n",
+    "    }\n",
+    "  },\n",
+    "  setItem(key, value) {\n",
+    "    try {\n",
+    "      localStorage.setItem(key, value);\n",
+    "    } catch(e) {\n",
+    "      // \n",
+    "    }\n",
+    "  },\n",
+    "  removeItem(key, value) {\n",
+    "    try {\n",
+    "      localStorage.removeItem(key, value);\n",
+    "    } catch(e) {\n",
+    "      // \n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "//* if LS not supported, fall back to memory class\n",
+    "\n",
+    "function isSupportLS() {\n",
+    "  try {\n",
+    "    localStorage.setItem('_ranger-test-key', 'hi')\n",
+    "    localStorage.getItem('_ranger-test-key')\n",
+    "    localStorage.removeItem('_ranger-test-key')\n",
+    "    return true\n",
+    "  } catch (e) {\n",
+    "    return false\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class Memory {\n",
+    "  constructor() {\n",
+    "    this.cache = {}\n",
+    "  }\n",
+    "  setItem(cacheKey, data) {\n",
+    "    this.cache[cacheKey] = data\n",
+    "  }\n",
+    "  getItem(cacheKey) {\n",
+    "    return this.cache[cacheKey]\n",
+    "  }\n",
+    "  removeItem(cacheKey) {\n",
+    "    this.cache[cacheKey] = undefined\n",
+    "  }\n",
+    "}\n",
+    "// if not support localStorage, fallback to memory\n",
+    "export const storage2 = isSupportLS() ? window.localStorage : new Memory();\n"
+   ]
   }
  ],
  "metadata": {
