--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -178,7 +178,6 @@
    "outputs": [],
    "source": [
     "import React from 'react'\n",
-    "//! incomplete\n",
     "//* goal is to pass any items, and have the id of that \n",
     "//* item propagate through to 2nd (render) function\n",
     "\n",
@@ -356,66 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "Conflict with a committed line: \nconst getKeyWithHighestValue = <TObj extends Record<string, number>>(\n______^\nTS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.\n\nLine 5, Character 7\nconst getKeyWithHighestValue = <TObj extends Record<string, number>>(\n______^\nTS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.\n\nConflict with a committed line: \nconst finalResult = getKeyWithHighestValue({\n______^\nTS2451: Cannot redeclare block-scoped variable 'finalResult'.\n\nLine 28, Character 7\nconst finalResult = getKeyWithHighestValue({\n______^\nTS2451: Cannot redeclare block-scoped variable 'finalResult'.\n\nConflict with a committed line: \nconst key = finalResult.key;\n______^\nTS2451: Cannot redeclare block-scoped variable 'key'.\n\nLine 34, Character 7\nconst key = finalResult.key;\n______^\nTS2451: Cannot redeclare block-scoped variable 'key'.\n\nLine 0, Character 7\nconst value = finalResult.value;\n______^\nTS2451: Cannot redeclare block-scoped variable 'value'.\n\nLine 35, Character 7\nconst value = finalResult.value;\n______^\nTS2451: Cannot redeclare block-scoped variable 'value'.",
-     "output_type": "error",
-     "traceback": [
-      "Error: Conflict with a committed line: ",
-      "const getKeyWithHighestValue = <TObj extends Record<string, number>>(",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.",
-      "",
-      "Line 5, Character 7",
-      "const getKeyWithHighestValue = <TObj extends Record<string, number>>(",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'getKeyWithHighestValue'.",
-      "",
-      "Conflict with a committed line: ",
-      "const finalResult = getKeyWithHighestValue({",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'finalResult'.",
-      "",
-      "Line 28, Character 7",
-      "const finalResult = getKeyWithHighestValue({",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'finalResult'.",
-      "",
-      "Conflict with a committed line: ",
-      "const key = finalResult.key;",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'key'.",
-      "",
-      "Line 34, Character 7",
-      "const key = finalResult.key;",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'key'.",
-      "",
-      "Line 0, Character 7",
-      "const value = finalResult.value;",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'value'.",
-      "",
-      "Line 35, Character 7",
-      "const value = finalResult.value;",
-      "______^",
-      "TS2451: Cannot redeclare block-scoped variable 'value'.",
-      "    at execTranspile (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
-      "    at Session.transpiler [as transpile] (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
-      "    at Session._runNow (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
-      "    at Session._run (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
-      "    at Session.execute (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
-      "    at Kernel.execute_request (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
-      "    at Kernel.onShellMessage (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
-      "    at Socket.<anonymous> (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
-      "    at Socket.emit (node:events:527:28)",
-      "    at Socket._emitMessage (/Users/jamesdeola/.nvm/versions/node/v16.15.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "//* sometimes you need to contrain the generic that gets passed in\n",
     "\n",
@@ -476,13 +418,18 @@
     "  obj: TObj\n",
     "): Array<keyof TObj> => { // ⬅️ can remove Array<keyof TObj>\n",
     "  // return Object.keys(obj) //! this errors bc TS can get confused with complex generics\n",
-    "  return Object.keys(obj) as Array<keyof TObj>\n",
+    "  return Object.keys(obj) as Array<keyof TObj> // use 'as' keyword to override\n",
     "}\n",
     "\n",
     "const resultObj = typedObjectKeys({\n",
     "  name: \"Jim\",\n",
     "  age: 33\n",
-    "});"
+    "});\n",
+    "\n",
+    "// written again, more concisely\n",
+    "const objKeys = <T extends object>(obj: T) => {\n",
+    "  return Object.keys(obj) as Array<keyof T>;\n",
+    "}"
    ]
   },
   {
@@ -495,27 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style='background:#ffecb3;padding:1em;border-left:2px solid #ff6d00'><b>Configuration is not found!</b> Default configuration will be used: <pre>{\"module\":1,\"target\":1,\"moduleResolution\":2,\"esModuleInterop\":true}</pre></div>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "some string\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "//* we need to constrain TKey but still infer it\n",
     "const getValue1 = <TObj, TKey extends keyof TObj>(obj: TObj, key: TKey) => {\n",
@@ -872,6 +801,196 @@
     "    };\n",
     "  }\n",
     ");"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Enums @ compile time\n",
+    "\n",
+    "Even though Enums are real objects that exist at runtime, the keyof keyword works differently than you might expect for typical objects. Instead, use keyof typeof to get a Type that represents all Enum keys as strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enum LogLevel {\n",
+    "  ERROR,\n",
+    "  WARN,\n",
+    "  INFO,\n",
+    "  DEBUG,\n",
+    "}\n",
+    " \n",
+    "/**\n",
+    " * This is equivalent to:\n",
+    " * type LogLevelStrings = 'ERROR' | 'WARN' | 'INFO' | 'DEBUG';\n",
+    " */\n",
+    "type LogLevelStrings = keyof typeof LogLevel;\n",
+    " \n",
+    "function printImportant(key: LogLevelStrings, message: string) {\n",
+    "  const num = LogLevel[key];\n",
+    "  if (num <= LogLevel.WARN) {\n",
+    "    console.log(\"Log level key is:\", key);\n",
+    "    console.log(\"Log level value is:\", num);\n",
+    "    console.log(\"Log level message is:\", message);\n",
+    "  }\n",
+    "}\n",
+    "printImportant(\"ERROR\", \"This is a message\");"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objects vs Enums\n",
+    "In modern TypeScript, you may not need an enum when an object with as const could suffice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const enum EDirection {\n",
+    "  Up,\n",
+    "  Down,\n",
+    "  Left,\n",
+    "  Right,\n",
+    "}\n",
+    " \n",
+    "const ODirection = {\n",
+    "  Up: 0,\n",
+    "  Down: 1,\n",
+    "  Left: 2,\n",
+    "  Right: 3,\n",
+    "} as const;\n",
+    " \n",
+    "EDirection.Up;\n",
+    "           // (enum member) EDirection.Up = 0\n",
+    " \n",
+    "ODirection.Up;\n",
+    "           // (property) Up: 0\n",
+    " \n",
+    "// Using the enum as a parameter\n",
+    "function walk(dir: EDirection) {}\n",
+    " \n",
+    "// It requires an extra line to pull out the values\n",
+    "type Direction = typeof ODirection[keyof typeof ODirection];\n",
+    "function run(dir: Direction) {}\n",
+    " \n",
+    "walk(EDirection.Left);\n",
+    "run(ODirection.Right);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Generic Types in React component\n",
+    "\n",
+    "https://www.totaltypescript.com/tips/use-generics-in-react-to-make-dynamic-and-flexible-components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import * as React from 'react';\n",
+    "\n",
+    "// takes type of TItem and passes it it's render function\n",
+    "interface TableProps<TItem> {\n",
+    "  items:TItem[];\n",
+    "  renderItem: (item:TItem) => React.ReactNode;\n",
+    "}\n",
+    "\n",
+    "//must be function component not arrow\n",
+    "export function Table<TItem>(props: TableProps<TItem>) {\n",
+    "  return null;\n",
+    "}\n",
+    "\n",
+    "const component = () => {\n",
+    "  return (\n",
+    "    <Table<{id:number}> \n",
+    "      items={[\n",
+    "        {id: 1,\n",
+    "        name: 'jim'},\n",
+    "      ]}\n",
+    "      renderItem={(item)=> <div>{item.id}</div>}\n",
+    "      ></Table>\n",
+    "  )\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Declare Globals \n",
+    "\n",
+    "Example with with common reducer pattern ie redux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// /types.ts\n",
+    "declare global {\n",
+    "  interface GlobalReducerEvent {\n",
+    "    LOG_IN: {};\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "export type GlobalReducer<TState> = (\n",
+    "  state: TState,\n",
+    "  event: {\n",
+    "    [EventType in keyof GlobalReducerEvent]: {\n",
+    "      type: EventType;\n",
+    "    } & GlobalReducerEvent[EventType];\n",
+    "  }[keyof GlobalReducerEvent]\n",
+    ") => TState;\n",
+    "\n",
+    "// /reducer.ts\n",
+    "\n",
+    "declare global {\n",
+    "  interface GlobalReducerEvent {\n",
+    "    ADD_TODO: { text: string }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "export const todosReducer: GlobalReducer<{ todos: { id: string }[] }> = (\n",
+    "  state,\n",
+    "  event\n",
+    ") => {\n",
+    "  // event.type === 'LOG_IN'\n",
+    "  // event.type = 'ADD_TODO'\n",
+    "  return state\n",
+    "}\n",
+    "\n",
+    "export const userReducer: GlobalReducer<{ id: string }> = (\n",
+    "  state,\n",
+    "  event\n",
+    ") => {\n",
+    "  // event.type === 'LOG_IN'\n",
+    "  // event.type === 'ADD_TODO'\n",
+    "  return state\n",
+    "}"
    ]
   }
  ],
