--- a/Javascript_Typescript/react_snippets.ipynb
+++ b/Javascript_Typescript/react_snippets.ipynb
@@ -209,10 +209,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//! AVOID: routets and filteredRoutes need to be kept in sync 👎\n",
-    "const [routes, setRoutes] = useStates([])\n",
-    "const [filteredRoutes, setFilteredRoutes] = useStates([])\n",
-    "const [search, setSearch] = useStates(\"\")\n",
+    "//! AVOID: routes and filteredRoutes need to be kept in sync 👎\n",
+    "const [routes, setRoutes] = useState([])\n",
+    "const [filteredRoutes, setFilteredRoutes] = useState([])\n",
+    "const [search, setSearch] = useState(\"\")\n",
     "\n",
     "// Using useEffect to sync related stated\n",
     "useEffect(() => {\n",
@@ -222,8 +222,8 @@
     "}, [search])\n",
     "\n",
     "//* PREFERED: Derive related state on render. This eliminates the need for useEffect 👍\n",
-    "const [routes2, setRoutes2] = useStates([])\n",
-    "const [search2, setSearch2] = useStates(\"\")\n",
+    "const [routes2, setRoutes2] = useState([])\n",
+    "const [search2, setSearch2] = useState(\"\")\n",
     "\n",
     "// Derive filtered routes on each render. \n",
     "// If this is expensive, memoize it.\n",
