--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -992,6 +992,327 @@
     "  return state\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Components as=\"...\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "React"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import React, { ComponentProps, JSXElementConstructor } from \"react\";\n",
+    "\n",
+    "export const Component = <\n",
+    "  T extends keyof JSX.IntrinsicElements | JSXElementConstructor<any>,\n",
+    ">(\n",
+    "  props: {\n",
+    "    as: T;\n",
+    "  } & ComponentProps<T>,\n",
+    ") => {\n",
+    "  const Comp = props.as;\n",
+    "  return <Comp {...(props as any)}></Comp>;\n",
+    "};\n",
+    "\n",
+    "const Link = (props: { href: string; children?: React.ReactNode }) => {\n",
+    "  return <a href={props.href}>{props.children}</a>;\n",
+    "};\n",
+    "\n",
+    "const yeah = <Component as={Link} href=\"awdawd\"></Component>;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export const Component = <TAs extends keyof JSX.IntrinsicElements>(\n",
+    "  props: {\n",
+    "    as: TAs;\n",
+    "  } & JSX.IntrinsicElements[TAs],\n",
+    ") => {\n",
+    "  const Comp = props.as as string;\n",
+    "  return <Comp {...(props as any)}></Comp>;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### TS + React Patterns\n",
+    "#### Adapter Pattern for handling heterogeneous types\n",
+    "\n",
+    "more info: https://itnext.io/top-5-react-typescript-design-patterns-to-boost-your-skills-to-the-next-level-5b5f54dd934f#a542\n",
+    "\n",
+    "The Adapter Pattern is a design pattern that allows two incompatible interfaces to work together. In React, this pattern can be used to adapt an existing component to work with a different data source or API.\n",
+    "\n",
+    "Suppose you have a React application that fetches data from an API using the Axios library. However, for some reason, you need to switch to using the Fetch API instead of Axios. Unfortunately, the Fetch API has a different interface than Axios, which means you’ll need to rewrite all the API calls in your codebase to use the Fetch API.\n",
+    "\n",
+    "Instead of rewriting all the API calls, you can use the Adapter Pattern to create an adapter that adapts the Fetch API to the same interface as Axios. You can create a fetchAdapter that takes the same arguments and returns the same shape of data as Axios. This way, you can minimize the amount of code you need to change and reduce the risk of bugs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "React",
+     "Axios"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "interface AxiosResponse<T = any> {\n",
+    "  data: T;\n",
+    "}\n",
+    "\n",
+    "interface AxiosError<T = any> extends Error {\n",
+    "  response: AxiosResponse<T>;\n",
+    "}\n",
+    "\n",
+    "interface AxiosInstance {\n",
+    "  get<T = any>(url: string, config?: any): Promise<AxiosResponse<T>>;\n",
+    "  post<T = any>(\n",
+    "    url: string,\n",
+    "    data?: any,\n",
+    "    config?: any\n",
+    "  ): Promise<AxiosResponse<T>>;\n",
+    "  // and other methods as needed\n",
+    "}\n",
+    "\n",
+    "interface FetchAdapter {\n",
+    "  get<T = any>(url: string, config?: any): Promise<AxiosResponse<T>>;\n",
+    "  post<T = any>(\n",
+    "    url: string,\n",
+    "    data?: any,\n",
+    "    config?: any\n",
+    "  ): Promise<AxiosResponse<T>>;\n",
+    "  // and other methods as needed\n",
+    "}\n",
+    "\n",
+    "const fetchAdapter: FetchAdapter = {\n",
+    "  get: async <T = any>(url: string, config?: any) => {\n",
+    "    const response = await fetch(url, config);\n",
+    "    const data = await response.json();\n",
+    "    return { data };\n",
+    "  },\n",
+    "  post: async <T = any>(url: string, data?: any, config?: any) => {\n",
+    "    const response = await fetch(url, {\n",
+    "      method: 'POST',\n",
+    "      headers: {\n",
+    "        'Content-Type': 'application/json',\n",
+    "      },\n",
+    "      body: JSON.stringify(data),\n",
+    "      ...config,\n",
+    "    });\n",
+    "    const responseData = await response.json();\n",
+    "    return { data: responseData };\n",
+    "  },\n",
+    "  // and other methods as needed\n",
+    "};\n",
+    "\n",
+    "// Usage example\n",
+    "const axiosInstance: AxiosInstance = {\n",
+    "  get: async (url: string, config?: any) => {\n",
+    "    try {\n",
+    "      const response = await fetchAdapter.get(url, config);\n",
+    "      return response;\n",
+    "    } catch (error) {\n",
+    "      const axiosError: AxiosError = new Error();\n",
+    "      axiosError.response = error.response;\n",
+    "      throw axiosError;\n",
+    "    }\n",
+    "  },\n",
+    "  post: async (url: string, data?: any, config?: any) => {\n",
+    "    try {\n",
+    "      const response = await fetchAdapter.post(url, data, config);\n",
+    "      return response;\n",
+    "    } catch (error) {\n",
+    "      const axiosError: AxiosError = new Error();\n",
+    "      axiosError.response = error.response;\n",
+    "      throw axiosError;\n",
+    "    }\n",
+    "  },\n",
+    "  // and other methods as needed\n",
+    "};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we define an interface AxiosInstance that describes the interface of Axios. We also define an interface FetchAdapter that describes the interface we want to use for the Fetch API. We then define an object fetchAdapter that implements the FetchAdapter interface by adapting the Fetch API to the Axios interface. Finally, we create an instance of AxiosInstance that uses the fetchAdapter to make API calls."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Facade Pattern for encapsulating complex components\n",
+    "\n",
+    "The Facade Pattern is a design pattern that provides a simplified interface to a complex system. In React, this pattern can be used to create a simpler API for complex components, making it easier for other developers to use those components.\n",
+    "\n",
+    "Suppose you have a complex API that fetches data from multiple sources and aggregates it to display a chart. The API has several methods, each with multiple parameters, and requires a lot of configuration to work correctly.\n",
+    "\n",
+    "To make it easier for other developers to use this API, you can create a Facade component that provides a simplified interface. The Facade component can handle all the complexity behind the scenes and expose a simple, easy-to-use API for other components to consume."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "React"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import React, { useState, useEffect } from 'react';\n",
+    "import ChartApi from './ChartApi';\n",
+    "\n",
+    "type FacadeProps = {\n",
+    "  chartType: string;\n",
+    "  dataUrl: string;\n",
+    "  width: number;\n",
+    "  height: number;\n",
+    "};\n",
+    "\n",
+    "const ChartFacade: React.FC<FacadeProps> = ({\n",
+    "  chartType,\n",
+    "  dataUrl,\n",
+    "  width,\n",
+    "  height,\n",
+    "}) => {\n",
+    "  const [data, setData] = useState([]);\n",
+    "\n",
+    "  useEffect(() => {\n",
+    "    const fetchData = async () => {\n",
+    "      const chartApi = new ChartApi();\n",
+    "      const rawData = await chartApi.fetchData(dataUrl);\n",
+    "      const chartData = chartApi.processData(rawData);\n",
+    "      setData(chartData);\n",
+    "    };\n",
+    "    fetchData();\n",
+    "  }, [dataUrl]);\n",
+    "\n",
+    "  return <Chart type={chartType} data={data} width={width} height={height} />;\n",
+    "};\n",
+    "\n",
+    "export default ChartFacade;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Generic Compound React Component\n",
+    "https://codesandbox.io/embed/young-dream-ihjcq3?file=/src/App.tsx&codemirror=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import React from \"react\";\n",
+    "import \"./styles.css\";\n",
+    "\n",
+    "type Fruit = \"apple\" | \"banana\";\n",
+    "\n",
+    "// set of components that share the same API\n",
+    "type FruitProps = {\n",
+    "  name: Fruit;\n",
+    "};\n",
+    "\n",
+    "const COMPONENTS: Record<Fruit, React.ComponentType<FruitProps>> = {\n",
+    "  apple: ({ name }) => <div>{name}: 🍏</div>,\n",
+    "  banana: ({ name }) => <div>{name}: 🍌</div>\n",
+    "};\n",
+    "\n",
+    "export default function App() {\n",
+    "  const [fruit, setFruit] = React.useState<Fruit>(\"apple\");\n",
+    "  const FruitComponent = COMPONENTS[fruit];\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <FruitComponent name={fruit} />\n",
+    "      <button\n",
+    "        onClick={() => {\n",
+    "          setFruit((fruit) => (fruit === \"apple\" ? \"banana\" : \"apple\"));\n",
+    "        }}\n",
+    "      >\n",
+    "        toggle\n",
+    "      </button>\n",
+    "    </div>\n",
+    "  );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Obtaining keys of deeply nest object\n",
+    "\n",
+    "only works for objects with a finite depth. If we have an object with an infinite depth, such as an object that contains a reference to itself, the type definition will result in a stack overflow error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const obj = {\n",
+    "  a: {\n",
+    "    b: 1,\n",
+    "    c: {\n",
+    "      d: 2,\n",
+    "      e: 3,\n",
+    "    },\n",
+    "  },\n",
+    "  f: {\n",
+    "    g: 4,\n",
+    "  },\n",
+    "  h: undefined,\n",
+    "};\n",
+    "\n",
+    "type DeepKeys<T> = T extends object\n",
+    "  ? {\n",
+    "      [K in keyof T]-?: K extends string | number\n",
+    "        ? `${K}` | `${K}.${DeepKeys<T[K]>}`\n",
+    "        : never;\n",
+    "    }[keyof T]\n",
+    "  : never;\n",
+    "\n",
+    "function getAllKeys<T extends object>(obj: T): DeepKeys<T>[] {\n",
+    "  return Object.keys(obj) as DeepKeys<T>[];\n",
+    "}\n",
+    "\n",
+    "const keys = getAllKeys(obj);\n",
+    "console.log(keys); // [\"a\" | \"f\" | \"h\" | \"a.b\" | \"a.c\" | \"a.c.d\" | \"a.c.e\" | \"f.g\"]"
+   ]
   }
  ],
  "metadata": {
